# stdds

./: .gitignore  README.md
src/: CMakeLists.txt
src/fastdt/: CMakeLists.txt
src/fastdt/include/: vector.h
src/fastdt/src/: vector.c
src/fastdt/test/: benchmark_vector.c  test_vector.c
src/stdds/: CMakeLists.txt
src/stdds/include/: deque.h  forward_list.h  list.h  pair.h  stack.h  typedef.h  vector.h
src/stdds/src/: deque.c  forward_list.c  list.c  pair.c  stack.c  vector.c
src/stdds/test/: benchmark_forward_list.c  benchmark_list.c  benchmark_vector.c  test_deque.c  test_forward_list.c  test_list.c  test_pair.c  test_stack.c  test_vector.c
